fix(imprint): reduce text size of headers, add hyphen-auto to avoid layout break on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,6 +120,11 @@
   .h1 {
     @apply font-primary text-3xl font-semibold;
   }
+
+  h2,
+  .h2 {
+    @apply font-primary text-2xl font-semibold;
+  }
 }
 
 @layer utilities {
